# app/handler/ExampleHandler.go
@@ -6,16 +6,22 @@ import (
 	"gola/app/common/response"
 	"gola/app/common/swagger"
 	"gola/app/model"
+	"gola/global"
 	gogreet "gola/gorpc/greet"
+	"gola/grpc/discover"
 	"gola/grpc/greet"
 	"gola/internal/bootstrap"
+	"gola/internal/logger"
+	"io/ioutil"
 	"net/http"
+	"net/url"
+	"strconv"
+	"sync"
 
 	"github.com/gin-gonic/gin"
 )
 
-// API 範例
-// @Summary 範例
+// @Summary grpc greet
 // @Description 範例
 // @Tags 範例
 // @Success 200 {string} string "hello world"
@@ -29,8 +35,7 @@ func API(c *gin.Context) {
 	}
 }
 
-// API 範例
-// @Summary 範例
+// @Summary gorpc greet
 // @Description 範例
 // @Tags 範例
 // @Success 200 {string} string "hello world"
@@ -42,6 +47,85 @@ func API2(c *gin.Context) {
 	} else {
 		response.Success(c, res.Message)
 	}
+}
+
+// @Summary http greet
+// @Description 範例
+// @Tags 範例
+// @Success 200 {string} string "hello world"
+// @Router /api/http/hello [get]
+func API3(c *gin.Context) {
+	link := &url.URL{
+		Scheme: "http",
+		Path:   "/api/greet",
+	}
+	link.Host = discover.Discover("greet", "http")
+	res, err := http.DefaultClient.Get(link.String())
+	if err != nil {
+		response.Failed(c, errorcode.Code_Google_API_Return.New(err.Error()))
+		return
+	}
+	_ = res.Body.Close()
+
+	if res.StatusCode != http.StatusOK {
+		response.Failed(c, errorcode.Code_Google_API_Return.New(res.Status))
+		return
+	}
+
+	query := link.Query()
+	query.Set("again", "Y")
+	link.RawQuery = query.Encode()
+
+	res, err = http.DefaultClient.Get(link.String())
+	if err != nil {
+		response.Failed(c, errorcode.Code_Google_API_Return.New(err.Error()))
+		return
+	}
+
+	if res.StatusCode != http.StatusOK {
+		response.Failed(c, errorcode.Code_Google_API_Return.New(res.Status))
+		return
+	}
+
+	defer res.Body.Close()
+
+	msg, err := ioutil.ReadAll(res.Body)
+	if err != nil {
+		response.Failed(c, errorcode.Code_Google_API_Return.New(err.Error()))
+		return
+	}
+
+	response.Success(c, string(msg))
+}
+
+var mx = &sync.RWMutex{}
+var count int
+
+// @Summary http greet
+// @Description 範例
+// @Tags 範例
+// @Success 200 {string} string "hello world"
+// @Router /api/greet [get]
+func Greet(c *gin.Context) {
+	name := c.DefaultQuery("name", "world")
+	again := c.Query("again") == "Y"
+
+	mx.Lock()
+	count++
+	num := strconv.Itoa(count)
+	mx.Unlock()
+
+	if again {
+		msg := "#" + num + ": Get Hello Again " + global.AppVersion + " from " + name
+		logger.Success(msg)
+		// time.Sleep(time.Second * 2)
+		c.String(http.StatusOK, msg)
+		return
+	}
+
+	msg := "#" + num + ": Get Hello " + global.AppVersion + " from " + name
+	logger.Success(msg)
+	c.String(http.StatusOK, msg)
 }
 
 // Config 範例
