# docs/swagger.json
@@ -1,8 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {},
-        "license": {}
+        "contact": {}
     },
     "paths": {
         "/api/config": {
@@ -25,7 +24,6 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "object",
                             "$ref": "#/definitions/swagger.ConfigRequest"
                         }
                     }
@@ -52,7 +50,7 @@
                 "tags": [
                     "範例"
                 ],
-                "summary": "範例",
+                "summary": "gorpc greet",
                 "responses": {
                     "200": {
                         "description": "hello world",
@@ -69,7 +67,24 @@
                 "tags": [
                     "範例"
                 ],
-                "summary": "範例",
+                "summary": "grpc greet",
+                "responses": {
+                    "200": {
+                        "description": "hello world",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/http/hello": {
+            "get": {
+                "description": "範例",
+                "tags": [
+                    "範例"
+                ],
+                "summary": "http greet",
                 "responses": {
                     "200": {
                         "description": "hello world",
@@ -187,7 +202,7 @@
                     "type": "string"
                 },
                 "port": {
-                    "type": "string"
+                    "type": "integer"
                 }
             }
         },
@@ -195,11 +210,9 @@
             "type": "object",
             "properties": {
                 "defaultMaster": {
-                    "type": "object",
                     "$ref": "#/definitions/bootstrap.CacheConf"
                 },
                 "defaultSlave": {
-                    "type": "object",
                     "$ref": "#/definitions/bootstrap.CacheConf"
                 }
             }
@@ -208,35 +221,24 @@
             "type": "object",
             "properties": {
                 "app": {
-                    "type": "object",
                     "$ref": "#/definitions/bootstrap.AppConf"
                 },
                 "bot": {
-                    "type": "object",
                     "$ref": "#/definitions/bootstrap.BotConf"
                 },
                 "caches": {
-                    "type": "object",
                     "$ref": "#/definitions/bootstrap.CacheList"
                 },
                 "databases": {
-                    "type": "object",
                     "$ref": "#/definitions/bootstrap.DatabaseList"
                 },
                 "log": {
-                    "type": "object",
                     "$ref": "#/definitions/bootstrap.LogConf"
                 },
-                "mode": {
-                    "description": "程序執行模式",
-                    "type": "string"
-                },
                 "server": {
-                    "type": "object",
                     "$ref": "#/definitions/bootstrap.ServerConf"
                 },
                 "services": {
-                    "type": "object",
                     "$ref": "#/definitions/bootstrap.ServiceList"
                 }
             }
@@ -257,7 +259,7 @@
                     "type": "string"
                 },
                 "port": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "username": {
                     "type": "string"
@@ -268,11 +270,9 @@
             "type": "object",
             "properties": {
                 "defaultMaster": {
-                    "type": "object",
                     "$ref": "#/definitions/bootstrap.DatabaseConf"
                 },
                 "defaultSlave": {
-                    "type": "object",
                     "$ref": "#/definitions/bootstrap.DatabaseConf"
                 }
             }
@@ -293,10 +293,6 @@
         "bootstrap.ServerConf": {
             "type": "object",
             "properties": {
-                "autoPort": {
-                    "description": "啟用自動尋找環境變數:PORT",
-                    "type": "boolean"
-                },
                 "host": {
                     "description": "伺服器的Host",
                     "type": "string"
@@ -311,7 +307,7 @@
                 },
                 "port": {
                     "description": "伺服器的Port",
-                    "type": "string"
+                    "type": "integer"
                 },
                 "secure": {
                     "description": "是否要安全憑證",
@@ -332,7 +328,7 @@
                     "type": "string"
                 },
                 "port": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "secure": {
                     "type": "boolean"
@@ -343,7 +339,6 @@
             "type": "object",
             "properties": {
                 "google": {
-                    "type": "object",
                     "$ref": "#/definitions/bootstrap.ServiceConf"
                 }
             }
@@ -356,9 +351,6 @@
                 },
                 "error_text": {
                     "type": "string"
-                },
-                "showLog": {
-                    "type": "boolean"
                 }
             }
         },
